--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ trillium-static-compiled = "0.5.0"
 trillium-router = "0.3.2"
 trillium-logger = "0.4.0"
 anyhow = { version = "1.0.56", features = [ "backtrace" ] }
+clap = "3.1.6"
