--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.5", features = [  "runtime-tokio-rustls", "sqlite", "json" ] }
-reqwest = { verison = "0.11.10", features = [ "json" ] }
+reqwest = { version = "0.11.10", features = [ "json" ] }
 serde_json = { version = "1.0.79", features = [ "raw_value" ] }
 serde = { version = "1.0.136", features = ["derive"] }
 dotenv = "0.15.0"
