--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.5.13", features = [  "runtime-tokio-rustls", "sqlite", "json" ] }
+sqlx = { version = "0.5.13", features = [ "offline", "runtime-tokio-rustls", "sqlite", "json" ] }
 reqwest = { version = "0.11.10", features = [ "json" ] }
 serde_json = { version = "1.0.79", features = [ "raw_value" ] }
 serde = { version = "1.0.136", features = ["derive"] }
