--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,18 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.5.13", features = [ "offline", "runtime-tokio-rustls", "sqlite", "json" ] }
-reqwest = { version = "0.11.10", features = [ "json" ] }
-serde_json = { version = "1.0.79", features = [ "raw_value" ] }
-serde = { version = "1.0.136", features = ["derive"] }
+sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "sqlite", "json" ] }
+reqwest = { version = "0.11.20", features = [ "json" ] }
+serde_json = { version = "1.0.107", features = [ "raw_value" ] }
+serde = { version = "1.0.188", features = ["derive"] }
 dotenv = "0.15.0"
-trillium-tokio = "0.2.1"
-trillium = "0.2.2"
-maud = "0.23.0"
+trillium-tokio = "0.3.2"
+trillium = "0.2.9"
+maud = "0.25.0"
 trillium-static-compiled = "0.5.0"
-trillium-router = "0.3.2"
-trillium-logger = "0.4.0"
-anyhow = { version = "1.0.56", features = [ "backtrace" ] }
-clap = "3.1.6"
+trillium-router = "0.3.5"
+trillium-logger = "0.4.3"
+anyhow = { version = "1.0.75", features = [ "backtrace" ] }
+clap = { version = "4.4.6", features = ["derive"] }
 lazy_static = "1.4.0"
-regex = "1.5.5"
+regex = "1.9.6"
