--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ anyhow = { version = "1.0.75", features = [ "backtrace" ] }
 clap = { version = "4.4.6", features = ["derive"] }
 lazy_static = "1.4.0"
 regex = "1.9.6"
+tracing-subscriber = "0.3.17"
+tracing = "0.1.37"
